2012-02-01  Sergio Martin <sergio.martin@artica.es>

	* operation/search.php: Fix a typo

	* upgrade_to_3.0.sql
	upgrade_to_3.0.sql: Added fields to database 
	to assign a user to a company, active simple 
	interface mode and private contracts

	* operation/users/user_edit.php
	integria_db.sql
	godmode/usuarios/configurar_usuarios.php
	godmode/usuarios/lista_usuarios.php: Added setup 
	configuration to assign a user to a company and the
	simple interface mode configuration. Clean the mess
	of user edition code

2012-01-31  Sancho Lerena <slerena@artica.es>

	* operation/incidents/incident_report.php: Fixed some ugly formatting

	* operation/search.php: Fixed ACLs on people search. Added link to
	montly report from here.

2012-01-31  Sergio Martin <sergio.martin@artica.es>

	* include/functions_inventories.php
	include/functions_db.php
	operation/side_menu.php
	operation/contracts/contract_detail.php
	operation/contacts/contact_detail.php
	operation/companies/company_role.php
	operation/companies/company_detail.php: Fixed several 
	ACLs issues into the companies section

2012-01-31 Dario Rodriguez <dario.rodriguez@artica.es>

	* index.php: Removed developer_bypass hook.
	* general/error_noconfig.php,
	general/error_install.php,
	general/error_perms.php: Fixed some problems with error page style.

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	* operation/search.php: Fixed global search trimming the search
	to avoid errors and adding activities of the companies to search it

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	* operation/contacts/contact_detail.php: Fixed SQL error showed
	when try to create a contract without company and ACLs in the 
	contracts view

2012-01-30  Sergio Martin <sergio.martin@artica.es>

	*  operation/inventories/manage_prod.php: Fixed a string
	that was incomplete

	* godmode/setup/setup.php
	godmode/setup/setup_mailtemplates.php
	godmode/setup/setup_auth.php
	godmode/setup/setup_visual.php: Fixed several strings