@@ -119,7 +119,7 @@ $table->head[0] = '';
 $table->head[1] = __('ID');
 $table->head[2] = __('SLA');
 $table->head[3] = __('Incident');
-$table->head[4] = __('Group');
+$table->head[4] = __('Group')."<br><i>".__('Company')."</i>";
 $table->head[5] = __('Status')."<br><i>".__('Resolution')."</i>";
 $table->head[6] = __('Priority');
 $table->head[7] = __('Updated')."<br><i>".__('Started')."</i>";
